fix layout issues

--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -32,6 +32,7 @@
   .links {
     margin-top: 1.3em;
     display: flex;
+    flex-wrap: wrap;
     gap: 2rem;
     a {
       &:not(:hover) {
