--- a/assets/scss/page-branch.scss
+++ b/assets/scss/page-branch.scss
@@ -77,9 +77,11 @@ article {
     &:hover {
       background-color: var(--branch-article-background-color-hover);
     }
+    overflow-y: hidden;
     & > div {
-      mask-image: linear-gradient(#000 70%, transparent 95%);
-      height: calc(100% - 2 * var(--branch-article-border-radius));
+      -webkit-mask-image: linear-gradient(black 80%, transparent 100%);
+      mask-image: linear-gradient(black 80%, transparent 100%);
+      height: calc(100% - var(--branch-article-border-radius));
       .title {
         font-family: var(--header-font);
         font-size: var(--branch-article-title-font-size);
