--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -78,9 +78,13 @@ a {
     left: 1rem;
     padding: 0;
     margin: 0;
-    font-size: 2.3em;
+    font-size: var(--header-image-title-font-size);
     text-shadow: 1px 1px 4px rgba(0,0,0,0.5);
     color: white;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
   }
   .message {
     position: absolute;
@@ -115,6 +119,8 @@ page.leaf-bundle {
 @media print, screen and (max-width: 600px) {
   :root {
     --extra-header-height: var(--title-plus-date-height);
+    --header-image-title-font-size: 1.5em;
+
   }
   header .menu {
     max-width: 2em;
