--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -73,5 +73,6 @@
   --table-header-background-color: hsl(var(--main-color-hue), 10%, 80%);
   --table-odd-row-background-color: hsl(var(--main-color-hue), 10%, 94%);
   --table-even-row-background-color: hsl(var(--main-color-hue), 10%, 89%);
+  --header-image-title-font-size: 2.3em;
 }
 @import "page.scss";
